--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@ body {
    margin:0px;
 }
 
-
+         
 </style>
 </head>
 <body>
 
-  <center><img style="width:100%;" src="img/notch.png"></center>
+  <center><img style="width:100%;" src="https://onuniverse-assets.imgix.net/03DC1685-9921-4C0D-A7B4-740A106C3A04.jpg?q=75&dpr=1"></center>
 
 <br>
 
